--- a/assets/scss/modules/admin/_toolbar.scss
+++ b/assets/scss/modules/admin/_toolbar.scss
@@ -67,6 +67,7 @@
     font-size: 100%;
     visibility: hidden;
     height: 0;
+    list-style: none;
     position: absolute;
     left: 0;
     top: 100%;
