Wrapping up Localisation

--- a/templates/dashboard/dashboard.twig
+++ b/templates/dashboard/dashboard.twig
@@ -1,7 +1,7 @@
 {% extends '@bolt/_base/layout.twig' %}
 
 {% block title %}
-  <i class='fas mr-2 fa-tachometer-alt'></i><strong>Dashboard</strong>
+  <i class='fas mr-2 fa-tachometer-alt'></i><strong>{{ 'general.dashboard'|trans }}</strong>
 {% endblock title %}
 
 {% block main %}
