--- a/templates/_base/layout.twig
+++ b/templates/_base/layout.twig
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Source+Sans+Pro:300,400,600&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ asset('assets/bolt.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ asset('assets/theme-default.css') }}">
+    {% set backendTheme = 'assets/theme-' ~ user.backendTheme|default('default') ~ '.css' %}
+    <link rel="stylesheet" type="text/css" href="{{ asset(backendTheme) }}">
     {% endblock %}
 </head>
 
