--- a/templates/content/listing.twig
+++ b/templates/content/listing.twig
@@ -22,7 +22,7 @@
 
     <div class="card">
         <div class="card-header">
-            Contentlisting
+            {{ 'title.contentlisting'|trans }}
         </div>
         <div class="card-body">
             (filtering options go here)
