--- a/templates/finder/_files.twig
+++ b/templates/finder/_files.twig
@@ -3,11 +3,11 @@
     <thead class="thead-light">
     <tr>
         <th></th>
-        <th>Filename</th>
-        <th>Thumbnail</th>
-        <th>Size</th>
-        <th>Date</th>
-        <th>Actions</th>
+        <th>{{ 'filename'|trans }}</th>
+        <th>{{ 'thumbnail'|trans }}</th>
+        <th>{{ 'size'|trans }}</th>
+        <th>{{ 'date'|trans }}</th>
+        <th>{{ 'actions'|trans }}</th>
     </tr>
     </thead>
 
