--- a/templates/finder/_folders.twig
+++ b/templates/finder/_folders.twig
@@ -3,8 +3,8 @@
     <thead class="thead-light">
     <tr>
         <th></th>
-        <th>Directoryname</th>
-        <th>Actions</th>
+        <th>{{ 'directoryname'|trans }}</th>
+        <th>{{ 'actions'|trans }}</th>
     </tr>
     </thead>
 
