--- a/templates/editcontent/edit.twig
+++ b/templates/editcontent/edit.twig
@@ -6,7 +6,7 @@
 {% endfor %}
 
 {% block title %}
-    {{ icon(record) }} Edit {{ record.definition.singular_name }} » <strong>{{ record.title|excerpt(50)|default('New') }}</strong>
+    {{ icon(record) }} {{ 'caption.edit'|trans }} {{ record.definition.singular_name }} » <strong>{{ record.title|excerpt(50)|default('New') }}</strong>
 {% endblock %}
 
 {% block main %}
@@ -20,13 +20,13 @@
   <ul class="nav editor__tabbar" role="tablist">
       {% for group in groups %}
           <li class="nav-item">
-              <a 
-                class="nav-item nav-link {% if loop.first %}active{% endif %}" 
-                id="{{group|slug}}-tab-link" 
-                data-toggle="pill" 
-                href="#{{group|slug}}-tab" 
-                role="tab" 
-                aria-controls="{{group|slug}}" 
+              <a
+                class="nav-item nav-link {% if loop.first %}active{% endif %}"
+                id="{{group|slug}}-tab-link"
+                data-toggle="pill"
+                href="#{{group|slug}}-tab"
+                role="tab"
+                aria-controls="{{group|slug}}"
                 aria-selected="false"
               >
               <span>{{group|capitalize}}</span></a>
@@ -52,9 +52,10 @@
   {% endfor %}
 </div>
 
+<button type="submit" class="btn btn-success mb-3">
+    <i class="fas fa-save mr-2"></i> {{ 'action.save'|trans }}
+</button>
 
-
-    <input type="submit" class="btn btn-primary" value="Save">
 
 </form>
 
@@ -69,7 +70,7 @@
         <form class="ui form">
 
             <button type="submit" class="btn btn-success mb-3" form="editcontent">
-                <i class="fas fa-save mr-2"></i>Save
+                <i class="fas fa-save mr-2"></i> {{ 'action.save'|trans }}
             </button>
 
             {% include '@bolt/editcontent/fields/select.twig' with {
@@ -120,7 +121,7 @@
                 'value': record.id,
                 'attributes': 'readonly form="editcontent"',
             } %}
-    
+
         </form>
 
     </div>
