--- a/templates/finder/_uploader.twig
+++ b/templates/finder/_uploader.twig
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/basic.css" integrity="sha256-NI6EfwSJhhs7gXBPbwLXD00msI29Bku3GDJT8gYW+gc=" crossorigin="anonymous" />
 
 <div class="card mb-4">
-    <div class="card-header">File uploader</div>
+    <div class="card-header">{{ 'caption.file_uploader'|trans }}</div>
 
     <script type="text/javascript" src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
 
