--- a/templates/finder/finder.twig
+++ b/templates/finder/finder.twig
@@ -1,12 +1,12 @@
 {% extends '@bolt/_base/layout.twig' %}
 
 {% block title %}
-    Finder » <strong>{{ name }}</strong>
+    {{ 'caption.finder'|trans }} » <strong>{{ name }}</strong>
 {% endblock %}
 
 {% block main %}
 
-    <h2>Path: {{ area }}{{ path }}</h2>
+    <h2>{{ 'caption.path'|trans }}: {{ area }}{{ path }}</h2>
 
     {% include '@bolt/finder/_quickselect.twig' %}
 
@@ -19,7 +19,7 @@
 {% block aside %}
 
 <div class="card mb-4">
-    <div class="card-header">Meta information</div>
+    <div class="card-header">{{ 'caption.meta_information'|trans }}</div>
     <div class="card-body">
 
     </div>
