--- a/assets/scss/modules/admin/_sidebar.scss
+++ b/assets/scss/modules/admin/_sidebar.scss
@@ -67,6 +67,7 @@
       transition: $transition-base;
       transform-origin: center;
       color: var(--admin-sidebar-icon);
+      font-weight: $font-weight-bold;
       width: 22px;
       opacity: 0.5;
     }
