--- a/assets/scss/themes/light.scss
+++ b/assets/scss/themes/light.scss
@@ -13,13 +13,13 @@
   --status-held:              #dd2443;
   --status-timed:             #741ce6;
 
-  --admin-sidebar:            #0c223b;
-  --admin-sidebar-text:       #ffffff;
-  --admin-sidebar-icon:       #ffffff;
-  --admin-sidebar-menu:       #0a1d32;
+  --admin-sidebar:            #ffffff;
+  --admin-sidebar-text:       #0c223b;
+  --admin-sidebar-icon:       #053b7a;
+  --admin-sidebar-menu:       #053b7a;
   --admin-sidebar-menu-text:  #ffffff;
 
-  --admin-toolbar:            #053b7a;
+  --admin-toolbar:            #ffffff;
   --admin-toolbar-text-light: #ffffff;
   --admin-toolbar-text-dark:  #0c223b;
   
