--- a/assets/scss/modules/editor/_tabbar.scss
+++ b/assets/scss/modules/editor/_tabbar.scss
@@ -19,6 +19,7 @@
       content: '';
     }
     span{
+      font-size: 95%;
       transition: $transition-base;
       display: block;
       pointer-events: none;
@@ -34,5 +35,8 @@
         color: var(--primary);
       }
     }
+  }
+  .nav-link{
+    padding: $spacer / 2 $spacer / 1.5;
   }
 }
