added extra slug functionality

--- a/assets/scss/modules/admin/_sidebar.scss
+++ b/assets/scss/modules/admin/_sidebar.scss
@@ -6,7 +6,7 @@
   background: var(--admin-sidebar);
   color: var(--admin-sidebar-text);
   height: 100%;
-  box-shadow: 0 0 40px 0 rgba(0,0,0, 0.07);
+  // box-shadow: 0 0 40px 0 rgba(0,0,0, 0.07);
   &--separator {
     padding: 0 $spacer;
     margin: $spacer / 2 0;
