--- a/templates/editcontent/fields/_base.twig
+++ b/templates/editcontent/fields/_base.twig
@@ -1,5 +1,11 @@
 {%- spaceless -%}
 
+{# Set type #}
+{% set type = field.type|default() %}
+
+{# Set variant #}
+{% set variant = define.variant|default('normal') %}
+
 {# Set the name #}
 {% if not name|default() %}
     {%  set name = 'fields[' ~ field.name ~ ']' %}
@@ -34,26 +40,28 @@
 {# Set the prefix and postfix attributes #}
 {% set prefix = prefix|default(field.definition.prefix|default()) %}
 {% if prefix and not ('<p' in prefix or '<span' in prefix or '<div' in prefix) %}
-    {% set prefix = '<span id="' ~ id ~ '_prefix" class="form-text text-muted">' ~ prefix ~ '</span>' %}
+    {% set prefix = '<span id="' ~ id ~ '_prefix" class="form--helper">' ~ prefix ~ '</span>' %}
 {% endif %}
 {% set postfix = postfix|default(field.definition.postfix|default()) %}
 {% if postfix and not ('<p' in postfix or '<span' in postfix or '<div' in postfix) %}
-    {% set postfix = '<span id="' ~ id ~ '_postfix" class="form-text text-muted">' ~ postfix ~ '</span>' %}
+    {% set postfix = '<span id="' ~ id ~ '_postfix" class="form--helper">' ~ postfix ~ '</span>' %}
 {% endif %}
 
 {%- endspaceless -%}
 
 
-<!-- field "{{ label }} {{ name }}" -->
-<div class="form-group">
+<!-- field " {{ type }} {{ variant }} {{ label }} {{ name }} -->
+<div class="form-group editor--group is-{{variant}}">
 {% if prefix %}
-    {{ prefix|raw }}
+    {% include 'editcontent/fields/_partials/_helper.twig' with { type: 'prefix', message: prefix} %}
 {% endif %}
+{% block label %}
+    {% include 'editcontent/fields/_partials/_label.twig' %}
+{% endblock %}
 {% block field %}
-
 
 {% endblock %}
 {% if postfix %}
-    {{ postfix|raw }}
+    {% include 'editcontent/fields/_partials/_helper.twig' with { type: 'postfix', message: postfix} %}
 {% endif %}
 </div>
