Added class binding to text input

--- a/templates/editcontent/fields/_base.twig
+++ b/templates/editcontent/fields/_base.twig
@@ -29,7 +29,8 @@
 {% if not class|default() %}
     {% set class = field.definition.class|default() %}
 {% endif %}
-{% set class = "form-control " ~ class %}
+
+{% set class = class %}
 
 
 {# Set the label #}
