--- a/templates/editcontent/fields/text.twig
+++ b/templates/editcontent/fields/text.twig
@@ -1,6 +1,7 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
+{{class}}
     <editor-text
         :value="{{ value|json_encode() }}"
         :name="'{{ name }}'"
