--- a/templates/editcontent/fields/embed.twig
+++ b/templates/editcontent/fields/embed.twig
@@ -1,6 +1,6 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
     (Embed preview, and some meta fields go here)
 {% endblock %}
