--- a/templates/editcontent/fields/file.twig
+++ b/templates/editcontent/fields/file.twig
@@ -9,7 +9,7 @@
                     <label>Filename</label>
                 </div>
                 <div class="col-9">
-                    <input name="{{ name }}[filename]" id="{{ id }}-filename" placeholder="filename.jpg" type="text" value="{{ field.get('filename') }}" class="{{ class }}" {{ attributes|default()|raw }}>
+                    <input name="{{ name }}[filename]" id="{{ id }}-filename" placeholder="filename.jpg" type="text" value="{{ field.get('filename') }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
                 </div>
 
             </div>
@@ -19,7 +19,7 @@
                     <label>Alt</label>
                 </div>
                 <div class="col-9">
-                    <input name="{{ name }}[alt]" placeholder="An image depicting a kitten" type="text" value="{{ field.get('alt') }}" class="{{ class }}" {{ attributes|default()|raw }}>
+                    <input name="{{ name }}[alt]" placeholder="An image depicting a kitten" type="text" value="{{ field.get('alt') }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
                 </div>
             </div>
 
@@ -28,7 +28,7 @@
                     <label>Title</label>
                 </div>
                 <div class="col-9">
-                    <input name="{{ name }}[alt]" placeholder="A description of this image" type="text" value="{{ field.get('title') }}" class="{{ class }}" {{ attributes|default()|raw }}>
+                    <input name="{{ name }}[alt]" placeholder="A description of this image" type="text" value="{{ field.get('title') }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
                 </div>
             </div>
 
