--- a/templates/editcontent/fields/geolocation.twig
+++ b/templates/editcontent/fields/geolocation.twig
@@ -1,7 +1,7 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
 
     (Small map, lat and long go here, somewhere)
 {% endblock %}
