--- a/templates/editcontent/fields/imagelist.twig
+++ b/templates/editcontent/fields/imagelist.twig
@@ -1,9 +1,9 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
-    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
-    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="…" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
 
     <mark>Note: This field is practically the same as the <code>filelist</code>-field.</mark>
 
