--- a/templates/editcontent/fields/integer.twig
+++ b/templates/editcontent/fields/integer.twig
@@ -1,5 +1,5 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <input name="{{ name }}" placeholder="…" type="number" step="1" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="…" type="number" step="1" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
 {% endblock %}
