--- a/templates/editcontent/fields/video.twig
+++ b/templates/editcontent/fields/video.twig
@@ -1,7 +1,7 @@
 {% extends '@bolt/editcontent/fields/_base.twig' %}
 
 {% block field %}
-    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="{{ class }}" {{ attributes|default()|raw }}>
+    <input name="{{ name }}" placeholder="First Name" type="text" value="{{ value }}" class="form-control {{ class }}" {{ attributes|default()|raw }}>
 
     <p>(Video preview, and some meta fields go here)</p>
 
